--- a/event/app/views/dm_event/admin/workshops/index.html.erb
+++ b/event/app/views/dm_event/admin/workshops/index.html.erb
@@ -12,7 +12,7 @@
         <ul class="text-stats-content">
             <li><%= financials[:summary][:total_possible].format(:no_cents_if_whole => true) %><span>best</span></li>
             <li><%= financials[:summary][:total_possible_worst].format(:no_cents_if_whole => true) %><span>worst (80%)</span></li>
-            <li style="color:green">n/a<span>paid</span></li>
+            <li style="color:green"><%= financials[:summary][:total_paid].format(:no_cents_if_whole => true) %><span>paid</span></li>
         </ul>
         <div class="separator-reflected" style="margin: 10px 0px;"></div>
         <% num_registrations = workshop.registrations.count %>
