added a base currency for workshop, and make sure prices and registrations use it

--- a/event/app/views/dm_event/admin/workshops/_configuration_sidebar.html.erb
+++ b/event/app/views/dm_event/admin/workshops/_configuration_sidebar.html.erb
@@ -10,6 +10,7 @@
         <li><%= link_to "Rejected Email".html_safe, edit_system_email_admin_workshop_path(@workshop, :email_type => 'rejected') %></li>
       </ul>
     </li>
+    <li><%= link_to "View Registrations".html_safe, [:admin, @workshop] %></li>
   </ul>
   
 <% end %>
