--- a/event/app/views/dm_event/admin/workshops/_form.html.erb
+++ b/event/app/views/dm_event/admin/workshops/_form.html.erb
@@ -13,10 +13,13 @@
     <% end %>
 
     <%= well_frame do %>
-      <%= f.input :published, :as => :toggle_checked, :label => 'Publish', :hint => 'Make available for registrations' %>
-      <%= f.input :country_id, :wrapper_html => { :class => 'searchDrop' }, :input_html => { :class => 'chosen_select' }, 
-                  :collection => ut_country_select_collection, :label_method => lambda {|t| t[0]}, :value_method => lambda {|t| t[1]},
-                  :label => "Country" %>
+      <%= f.input :published, :as => :toggle_checked, label: 'Publish', hint: 'Make available for registrations' %>
+      <%= f.input :country_id, required: true, wrapper_html: { :class => 'searchDrop' }, input_html: { :class => 'chosen_select' }, 
+                  collection: ut_country_select_collection, label_method: lambda {|t| t[0]}, value_method: lambda {|t| t[1]},
+                  label: 'Country' %>
+      <%= f.input :base_currency, label: 'Currency', required: true, collection: WorkshopPrice::CURRENCY_TYPES,
+                  hint: 'Currency used for this workshop',
+                  disabled: !(@workshop.workshop_prices.empty?) %>
       <div class="form-horizontal control-group string required workshop_starting_on">
         <label class="string required control-label" for="workshop_starting_on">
           <abbr title="required">*</abbr> Starting on
