--- a/event/app/views/dm_event/admin/workshop_prices/_form.html.erb
+++ b/event/app/views/dm_event/admin/workshop_prices/_form.html.erb
@@ -20,7 +20,7 @@
     <% end %>
     
     <%= f.input :price %>
-    <%= f.input :price_currency, :collection => WorkshopPrice::CURRENCY_TYPES %>
+    <%= f.input :price_currency, :collection => WorkshopPrice::CURRENCY_TYPES, disabled: true, hint: 'This is always the primary currency of the workshop' %>
     <%= f.input :valid_until, :as => :string, :input_html => {:class => 'datepicker'} %>
     <%= f.input :total_available %>
     <%= f.input :disabled, :as => :toggle_checked, :label => 'Disable?' %>
