--- a/core/app/views/dm_core/admin/users/index.html.erb
+++ b/core/app/views/dm_core/admin/users/index.html.erb
@@ -3,12 +3,12 @@
     <table id="user_table" class="table table-striped table-bordered table-block" data-source="<%= dm_core.admin_users_url %>">
       <thead>
         <tr>
+          <th width="40"></th>
           <th>Name</th>
           <th>Email</th>
           <th>Country</th>
           <th>Last Access</th>
           <th>Role</th>
-          <th width="75">Actions</th>
         </tr>
       </thead>
       <tbody>
