--- a/app/views/dm_core/admin/shared/_modal_dialog.html.erb
+++ b/app/views/dm_core/admin/shared/_modal_dialog.html.erb
@@ -7,9 +7,9 @@
     <%= content %>
   </div>
   <div class="modal-footer">
-    <button class="btn" data-dismiss="modal">Cancel</button>
+    <button type="button" class="btn" data-dismiss="modal">Cancel</button>
     <% if options[:include_save] %>
-      <button class="btn btn-primary">Save</button>
+      <button type="submit" class="btn btn-primary">Save</button>
     <% end %>
   </div>
 </div>
