financial calculation was not subtracting the discount
also fixed the cdv export formats and some screen titling

--- a/event/app/views/dm_event/admin/workshop_prices/edit.html.erb
+++ b/event/app/views/dm_event/admin/workshop_prices/edit.html.erb
@@ -1,2 +1,2 @@
-<% @title = 'Edit Price' %>
+<% content_for :content_title, "Edit Price <small>#{@workshop.title}</small>".html_safe %>
 <%= render 'form' %>
