--- a/event/app/views/dm_event/admin/workshop_prices/new.html.erb
+++ b/event/app/views/dm_event/admin/workshop_prices/new.html.erb
@@ -1,2 +1,2 @@
-<% @title = 'New Price' %>
+<% content_for :content_title, "New Price <small>#{@workshop.title}</small>".html_safe %>
 <%= render 'form' %>
