--- a/event/app/views/dm_event/admin/workshops/edit.html.erb
+++ b/event/app/views/dm_event/admin/workshops/edit.html.erb
@@ -1,2 +1,2 @@
-<% @title = 'Edit Workshop' %>
+<% content_for :content_title, "Edit Workshop <small>#{@workshop.title}</small>".html_safe %>
 <%= render 'form' %>
