--- a/event/app/views/dm_event/admin/workshops/index.html.erb
+++ b/event/app/views/dm_event/admin/workshops/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for :content_title, 'Workshop Dashboard' %>
 <% content_for :content_title_extra do %>
   <div class='navbar'><ul class='nav pull-right'>
     <li><%= link_to(icon_label('icon-plus', 'New'), new_admin_workshop_path, :title => 'New Workshop', :class => "nav-btn-primary") %></li>
