--- a/event/app/views/dm_event/admin/workshops/show.html.erb
+++ b/event/app/views/dm_event/admin/workshops/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for :content_title, "#{@workshop.title}" %>
 <% content_for :content_title_extra do %>
   <div class='navbar'>
     <ul class='nav pull-right'>
